--- a/mZone/application/views/scripts/user/add.phtml
+++ b/mZone/application/views/scripts/user/add.phtml
@@ -7,7 +7,7 @@
 
 <div class="container">
 <div class="panel panel-primary">
-  <div class="panel-heading"> <h1><center>  Add User </center></h1></div>
+  <div class="panel-heading"> <h1><center>  Registration </center></h1></div>
 
 
 <div class="panel-body" border="1">
