--- a/mZone/application/views/scripts/user/login.phtml
+++ b/mZone/application/views/scripts/user/login.phtml
@@ -9,7 +9,7 @@
 
 <div class="container">
 <div class="panel panel-primary">
-  <div class="panel-heading"> <h1><center>  Add User </center></h1></div>
+  <div class="panel-heading"> <h1><center>  Login </center></h1></div>
 
 
 <div class="panel-body" border="1">
