--- a/mZone/application/views/scripts/user/home.phtml
+++ b/mZone/application/views/scripts/user/home.phtml
@@ -1,1 +1,12 @@
+
+
+<?php
+//start session with facebook and get username and echo his/her name 
+// $fbsession = new Zend_Session_Namespace('facebook');
+
+// $name = $fbsession->first_name;
+// echo "<br>";
+// echo "FaceBOOK Login by " . $name;
+?>
+
 <p>welcome in home page </p>
