--- a/mZone/application/views/scripts/user/login.phtml
+++ b/mZone/application/views/scripts/user/login.phtml
@@ -6,6 +6,7 @@
 
 <a href="/user/add"> signup</a>
 
+<a href="/user/fblogin">Login With Facebook </a>
 
 <div class="container">
 <div class="panel panel-primary">
