--- a/mZone/application/layouts/scripts/layout.phtml
+++ b/mZone/application/layouts/scripts/layout.phtml
@@ -1,1 +1,18 @@
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <?php echo $this->jQuery (); ?>
+</head>
+
+
 <?php echo $this->layout()->content; ?>
+
+<div class="navbar navbar-inverse navbar-fixed-bottom">
+    <div align="center">
+        <h3 class="navbar-text" style="float:none">Copyright © 2017 - Open Source
+        </h3>
+    </div>
+</div>
