Esraa & Salma 's Work

--- a/mZone/application/views/scripts/product/create.phtml
+++ b/mZone/application/views/scripts/product/create.phtml
@@ -1,4 +1,6 @@
 <br /><br />
 <div id="view-content">
-	<p>View script for controller <b>Product</b> and script/action name <b>create</b></p>
+		<?php
+	echo $this->product_form;
+	?>
 </div>
