--- a/mZone/application/views/scripts/product/add.phtml
+++ b/mZone/application/views/scripts/product/add.phtml
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="panel panel-primary">
     <div class="panel-heading">
-    	<center><h1> New User</h1></center>
+    	<center><h1> New Product</h1></center>
 
     	<?php
 
@@ -11,6 +11,6 @@
 
 
     	?>
-    </div>
+</div>
 </div>
 </div>
