--- a/mZone/application/views/scripts/user/fblogin.phtml
+++ b/mZone/application/views/scripts/user/fblogin.phtml
@@ -1,2 +1,1 @@
-<?php echo '<a href="' . htmlspecialchars( $this->facebook_url) . '"> Log in
-with Facebook! </a>'; ?>
+<?php header('Location: '.$this->facebook_url); ?>
