--- a/mZone/application/views/scripts/user/login.phtml
+++ b/mZone/application/views/scripts/user/login.phtml
@@ -4,10 +4,6 @@
 
 </head>
 
-<a href="/user/add"> signup</a>
-
-<a href="/user/fblogin">Login With Facebook </a>
-
 <div class="container">
 <div class="panel panel-primary">
   <div class="panel-heading"> <h1><center>  Login </center></h1></div>
@@ -21,3 +17,8 @@ echo $this->login_form;
  ?> 
 </div>
 </div>
+
+
+<a class="btn btn-info" href="/user/add"> signup</a>
+
+<a class="btn btn-primary" href="/user/fblogin">Login With Facebook </a>
