--- a/mZone/application/views/scripts/product/update.phtml
+++ b/mZone/application/views/scripts/product/update.phtml
@@ -1,15 +1,10 @@
 <div class="container">
   <div class="panel panel-primary">
     <div class="panel-heading">
-    	<center><h1> New User</h1></center>
+    	<center><h1>Update Product</h1></center>
 
     	<?php
-
-    	# $form= new Application_Form_Userform();
-
-    	echo $this->product_form;
-
-
+    	 echo $this->product_form;
     	?>
     </div>
 </div>
