--- a/mZone/application/views/scripts/category/list-all.phtml
+++ b/mZone/application/views/scripts/category/list-all.phtml
@@ -1,8 +1,13 @@
 <?php
+/*
+ *
+ * used in Admin Dashboard
+ *
+*/
 require_once("./admin/dashboard.php");
 ?>
 <div class="container">
-    <h1 class="text-center">Users Page</h1>
+    <h1 class="text-center">Categories Page</h1>
 
 
     <br>
@@ -55,8 +60,9 @@ require_once("./admin/dashboard.php");
         </tbody>
     </table>
 </div>
-<div class="btn-group">
+
+<div class="btn-group panel panel-primary">
     <button type="button" class="btn btn-default">
-        <a class="btn btn-primary" href='/category/add/'>Add New Category</a>
+        <a class="btn btn-primary btn-lg" href='/category/add/'>Add New Category </a>
     </button>
 </div>
