--- a/mZone/application/views/scripts/product/list-all.phtml
+++ b/mZone/application/views/scripts/product/list-all.phtml
@@ -59,8 +59,14 @@ require_once("./admin/dashboard.php");
         </tbody>
     </table>
 </div>
-<div class="btn-group">
+<div class="btn-group panel panel-primary">
     <button type="button" class="btn btn-default">
-        <a class="btn btn-primary" href='/product/add/'>Add New Product</a>
+        <a class="btn btn-primary btn-lg" href='/product/add/'>Add New Product</a>
+    </button>
+    <button type="button" class="btn btn-default">
+        <a class='btn btn btn-primary btn-lg' href='/product/gettopproducts'>Top products</a>
+    </button>
+    <button type="button" class="btn btn-default">
+        <a class='btn btn btn-primary btn-lg' href='/product/statistics'>Statistics</a>
     </button>
 </div>
