--- a/mZone/application/views/scripts/user/list-all.phtml
+++ b/mZone/application/views/scripts/user/list-all.phtml
@@ -1,4 +1,9 @@
 <?php
+    /*
+    *
+    * used in Admin Dashboard
+    *
+    */
     require_once("./admin/dashboard.php");
 ?>
 <div class="container">
@@ -70,8 +75,9 @@
         </tbody>
     </table>
 </div>
-<div class="btn-group">
+
+<div class="btn-group panel panel-primary">
     <button type="button" class="btn btn-default">
-        <a class="btn btn-primary" href="/user/create"> Add user </a>
+        <a class="btn btn-primary btn-lg" href="/user/create"> Add user </a>
     </button>
 </div>
