--- a/mZone/application/layouts/scripts/layout.phtml
+++ b/mZone/application/layouts/scripts/layout.phtml
@@ -1,48 +1,21 @@
 <?php
     require_once "./admin/header.php";
     require_once "./admin/dashboard.php";
-?>
+    /* Initialize action controller here */
+    /* Initialize action controller here */
+    $authorization = Zend_Auth::getInstance();
+    $storage=$authorization->getStorage();
+    $userdata=$storage->read();
 
-   <!-- <input id='search_input' class='form-control' placeholder='search bar'> </input>
-   <div id='searchResult' style="width:100px; height:100px;"></div>
-   <button   id='search_btn'type='submit'> search </button> -->
-<script>
-
-
-$('button#search_btn').on('click', function(){
-    var search = $('input#search_input').val();
-    if($.trim(search) != "") {
-//        alert(search);
-        $.post('/product/search', {name: search}, function(data){
-     var parseData=JSON.parse(data);
-           var htmlStr = "\\n\
-              <div class='col-sm-4 col-md-4'>\
-                   <div class='thumbnail'>\
-                      <img src=" + parseData[0].image + " class='img-circle'>\
-                       <div class='caption'>\
-                           <h3>" + parseData[0].name + "</h3>\
-                           <p><center><a href='#' class='btn btn-primary'\\n\
-                            role='button'>View Category Products</a></center></p>\
-                       </div>\
-                   </div>\
-               </div>"
-           $('div#searchResult').html(htmlStr);
-            
- 
-            
-            
-            
-    
-        });
+    if (!$authorization->hasIdentity() || $userdata->type == 3)
+    {
+        $this->redirect('/');
     }
 
-});
+?>
 
-</script>
 <?php    
     echo $this->layout()->content;
-
     require_once "./admin/footer.php";
-
 
 ?>
