--- a/mZone/application/views/scripts/product/details.phtml
+++ b/mZone/application/views/scripts/product/details.phtml
@@ -1,14 +1,3 @@
-<?php
-
-   $auth=Zend_Auth::getInstance();
-    $storage=$auth->getStorage();
-    $userdata=$storage->read();
-
-   //  var_dump($userdata);
-    
-   // echo  $userdata->id;
-   
-?>
 
 <div class="container">
   <div class="panel panel-primary">
@@ -19,74 +8,14 @@ $upload='/images';
 // var_dump($this->product);
 // exit;
 ?>
-  <img src ="<?php echo $this->baseUrl()."/images/".$this->product['image'];?>" height="100" width="100">
+        <center><img src ="<?php echo $this->baseUrl()."/images/".$this->product['image'];?>" height="300" width="300"></center>
     </div>
     <div class="panel-body">
 
-      <h4>Name:<?php echo $this->product['name']; ?></h4>
-      <h4>Price:<?php echo $this->product['price']; ?></h4>
-      <!-- <h4>Rate:<?php echo $this->product['rate']; ?></h4> -->
-      <h4>Description:<?php echo $this->product['pdesc']; ?></h4>
-     <!-- <a href="/wishlist/add">Add</a><br> -->
-        <!-- <a href="/wishlist/remove">Remove</a> -->
-
-        <!-- <h4>id:<?php echo $this->product['id']; ?></h4> -->
-
-
-
-
-
-
-
-
-
-                <div class="rate">
-                  <input type="radio" id="starNum1" name="rate" value="1" onClick="Rate(id)" />
-                  <label for="starNum1" > very weak</label>
-                  <input type="radio" id="starNum2" name="rate" value="2" onClick="Rate(id)"/>
-                  <label for="starNum2" >weak</label>
-                  <input type="radio" id="starNum3" name="rate" value="3" onClick="Rate(id)"/>
-                  <label for="starNum3" >good</label>
-                  <input type="radio" id="starNum4" name="rate" value="4" onClick="Rate(id)"/>
-                  <label for="starNum4" >very good</label>
-                  <input type="radio" id="starNum5" name="rate" value="5" onClick="Rate(id)"/>
-                  <label for="starNum5" >Excellent</label>
-                </div>
-            
-
-
-
-<script type="text/javascript">
-
-
-
-function Rate(id) {
- radios =document.getElementsByName('rate');
-for (var i = 0, length = radios.length; i < length; i++) {
-  if (radios[i].checked) {
-      var javascriptVariable = radios[i].value;
-      // console.log(radios[i].value);
-    // document.write(javascriptVariable);
-     // console.log(javascriptVariable);
-      // alert(javascriptVariable);
-
-// pid &uid not correct data for test only
-       window.location.href = "/product/avgrate?rate=" + javascriptVariable+"&pid="+<?php echo $this->product['id']; ?>+"&uid="+<?php echo $userdata->id ;?>;
-      // break;
-  }
-
-}
-
-}
-
-</script>
-
-
-
-
-
-
-
+      <h4>Name: <?php echo $this->product['name']; ?></h4>
+      <h4>Price: <?php echo $this->product['price']; ?></h4>
+      <h4>Rate: <?php echo $this->product['rate']; ?></h4>
+      <h4>Description: <?php echo $this->product['pdesc']; ?></h4>
   </div>
 </div>
 
