--- a/mZone/application/views/scripts/product/detailsforcustomer.phtml
+++ b/mZone/application/views/scripts/product/detailsforcustomer.phtml
@@ -1,29 +1,219 @@
-
-<div class="container">
-  <div class="panel panel-primary">
-    <div class="panel-heading">
-
-  <img src ="<?php echo $this->baseUrl()."/images/".$this->product['image'];?>" height="100" width="100">
-  <a class='btn btn-default btn-lg active' href='/wishlist/list'> My wishlist</a>
-    </div>
-    <div class="panel-body">
-      <h4>Name:<?php echo $this->product['name']; ?></h4>
-      <h4>Price:<?php echo $this->product['price']; ?></h4>
-      <h4>Rate:<?php echo $this->product['rate']; ?></h4>
-      <h4>Description:<?php echo $this->product['pdesc']; ?></h4>
-      <?php
-      if(empty($this->check)){?>
-      <!-- <a href="/wishlist/add">Add</a><br> -->
-       <!-- <a href="/wishlist/remove">Remove</a> -->
-       <a class='btn btn-default btn-lg active' href="<?='/product/addtowishlist/pid/'.$this->product['id']?>"> Add to wish list </a>
-       <?php
-       }else{?>
-       <a class='btn btn-default btn-lg active' href="<?='/product/remove/pid/'.$this->product['id']?>"> Remove from wish list </a>
-
 <?php
-}
+
+$auth=Zend_Auth::getInstance();
+$storage=$auth->getStorage();
+$userdata=$storage->read();
+
+// var_dump($this->product);
+
+// echo  $userdata->id;
+
 ?>
 
-  </div>
+
+
+<!-- single -->
+<div class="single">
+    <div class="container">
+        <div class="col-md-6 single-right-left animated wow slideInUp animated" data-wow-delay=".5s" style="visibility: visible; animation-delay: 0.5s; animation-name: slideInUp;">
+            <div class="grid images_3_of_2">
+                <div class="flexslider">
+                    <!-- FlexSlider -->
+                    <script>
+                        // Can also be used with $(document).ready()
+                        $(window).load(function() {
+                            $('.flexslider').flexslider({
+                                animation: "slide",
+                                controlNav: "thumbnails"
+                            });
+                        });
+                    </script>
+                    <!-- //FlexSlider-->
+                    <ul class="slides">
+                        <li data-thumb="<?php echo $this->baseUrl()."/images/".$this->product['image'];?>">
+                            <div class="thumb-image"> <img src="<?php echo $this->baseUrl()."/images/".$this->product['image'];?>" data-imagezoom="true" class="img-responsive"> </div>
+                        </li>
+                        <li data-thumb="<?php echo $this->baseUrl()."/images/".$this->product['image'];?>">
+                            <div class="thumb-image"> <img src="<?php echo $this->baseUrl()."/images/".$this->product['image'];?>" data-imagezoom="true" class="img-responsive"> </div>
+                        </li>
+                        <li data-thumb="<?php echo $this->baseUrl()."/images/".$this->product['image'];?>">
+                            <div class="thumb-image"> <img src="<?php echo $this->baseUrl()."/images/".$this->product['image'];?>" data-imagezoom="true" class="img-responsive"> </div>
+                        </li>
+                        <li data-thumb="<?php echo $this->baseUrl()."/images/".$this->product['image'];?>">
+                            <div class="thumb-image"> <img src="<?php echo $this->baseUrl()."/images/".$this->product['image'];?>" data-imagezoom="true" class="img-responsive"> </div>
+                        </li>
+                    </ul>
+                    <div class="clearfix"></div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 single-right-left simpleCart_shelfItem animated wow slideInRight animated" data-wow-delay=".5s" style="visibility: visible; animation-delay: 0.5s; animation-name: slideInRight;">
+            <h3><?php echo $this->product['name']; ?></h3>
+            <p>
+                <?php if(!empty($this->offer)): ?>
+                    <span class="item_price">
+                        $<?php echo $this->product['price'] - ($this->product['price']*($this->offer['percentage']/100)) ." >>> ".$this->offer['percentage']."% SALE "; ?>
+                    </span>
+                    <del>
+                        - $<?php echo $this->product['price']; ?>
+                    </del>
+                <?php endif; ?>
+
+            </p>
+            <div class="rating1">
+						<span class="starRating">
+							<input id="rating5" type="radio" name="rating" value="5" <?php if($this->product['rate']==5) echo 'checked=""'; ?>>
+							<label for="rating5">5</label>
+							<input id="rating4" type="radio" name="rating" value="4" <?php if($this->product['rate']==4) echo 'checked=""'; ?>>
+							<label for="rating4">4</label>
+							<input id="rating3" type="radio" name="rating" value="3" <?php if($this->product['rate']==3) echo 'checked=""'; ?>>
+							<label for="rating3">3</label>
+							<input id="rating2" type="radio" name="rating" value="2" <?php if($this->product['rate']==2) echo 'checked=""'; ?>>
+							<label for="rating2">2</label>
+							<input id="rating1" type="radio" name="rating" value="1" <?php if($this->product['rate']==1) echo 'checked=""'; ?>>
+							<label for="rating1">1</label>
+						</span>
+                <?php if($userdata): ;?>
+                    <div class="occasional">
+                        <h5>Rate :</h5>
+                        <div class="colr ert">
+                            <label class="radio"><input type="radio" id="starNum1" name="rate" value="1" onClick="Rate(id)" /><i></i>very weak</label>
+                        </div>
+                        <div class="colr">
+                            <label class="radio"><input type="radio" id="starNum2" name="rate" value="2" onClick="Rate(id)"/><i></i>weak</label>
+                        </div>
+                        <div class="colr">
+                            <label class="radio"><input type="radio" id="starNum3" name="rate" value="3" onClick="Rate(id)"/><i></i>good</label>
+                        </div>
+                        <div class="colr">
+                            <label class="radio"><input type="radio" id="starNum4" name="rate" value="4" onClick="Rate(id)"/><i></i>very good</label>
+                        </div>
+                        <div class="colr">
+                            <label class="radio"><input type="radio" id="starNum5" name="rate" value="5" onClick="Rate(id)"/><i></i>Excellent</label>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
+                <?php endif; ?>
+            </div>
+            <div class="description">
+                <h5>Check delivery, payment options and charges at your location</h5>
+                <input type="text" value="Enter pincode" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Enter pincode';}" required="">
+                <input type="submit" value="Check">
+            </div>
+            <div class="color-quality">
+                <div class="color-quality-right">
+                    <h5>Quality :</h5>
+                    <select id="country1" onchange="change_country(this.value)" class="frm-field required sect">
+                        <option value="null">5 Qty</option>
+                        <option value="null">6 Qty</option>
+                        <option value="null">7 Qty</option>
+                        <option value="null">10 Qty</option>
+                    </select>
+                </div>
+            </div>
+            <div class="occasional">
+                <div class="clearfix"> </div>
+            </div>
+            <div class="occasion-cart btn-group">
+                <a href="#" class="item_add hvr-outline-out button2">Add to cart</a>
+                <span></span>
+                <?php
+                if(empty($this->check)){?>
+                    <a class='hvr-outline-out button2' href="<?='/product/addtowishlist/pid/'.$this->product['id']?>"> Add to wish list </a>
+
+                    <?php
+                }else{?>
+                    <a class='hvr-outline-out button2 btn-danger' href="<?='/product/remove/pid/'.$this->product['id']?>"> Remove from wish list </a>
+
+                    <?php
+                }
+                ?>
+            </div>
+
+        </div>
+        <div class="clearfix"> </div>
+
+        <div class="bootstrap-tab animated wow slideInUp animated" data-wow-delay=".5s" style="visibility: visible; animation-delay: 0.5s; animation-name: slideInUp;">
+            <div class="bs-example bs-example-tabs" role="tabpanel" data-example-id="togglable-tabs">
+                <ul id="myTab" class="nav nav-tabs" role="tablist">
+                    <li role="presentation" class="active"><a href="#home" id="home-tab" role="tab" data-toggle="tab" aria-controls="home" aria-expanded="true">Description</a></li>
+                    <li role="presentation"><a href="#profile" role="tab" id="profile-tab" data-toggle="tab" aria-controls="profile">Reviews(1)</a></li>
+                    <li role="presentation" class="dropdown">
+                        <a href="#" id="myTabDrop1" class="dropdown-toggle" data-toggle="dropdown" aria-controls="myTabDrop1-contents">Information <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu" aria-labelledby="myTabDrop1" id="myTabDrop1-contents">
+                            <li><a href="#dropdown1" tabindex="-1" role="tab" id="dropdown1-tab" data-toggle="tab" aria-controls="dropdown1">cleanse</a></li>
+                            <li><a href="#dropdown2" tabindex="-1" role="tab" id="dropdown2-tab" data-toggle="tab" aria-controls="dropdown2">fanny</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <div id="myTabContent" class="tab-content">
+                    <div role="tabpanel" class="tab-pane fade in active bootstrap-tab-text" id="home" aria-labelledby="home-tab">
+                        <h5>Product Brief Description</h5>
+                        <p>
+                            <span><?php echo $this->product['pdesc']; ?></span></p>
+                    </div>
+
+                    <div role="tabpanel" class="tab-pane fade bootstrap-tab-text" id="profile" aria-labelledby="profile-tab">
+                        <div class="bootstrap-tab-text-grids">
+                            <?php if ($this->reviews): ?>
+                                <?php foreach(($this->reviews) as $key=>$value): ?>
+                                    <div class="bootstrap-tab-text-grid">
+                                        <div class="bootstrap-tab-text-grid-left">
+                                            <img src="<?php $this->baseUrl() ?>/images/defaultimg" alt=" " class="img-responsive">
+                                        </div>
+                                        <div class="bootstrap-tab-text-grid-right">
+                                            <ul>
+                                                <li><a href="#"><?php echo $this->users[$key]['name'];?></a></li>
+                                                <li><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span><?php echo $value["date"]?></li>
+                                            </ul>
+                                            <p><?php echo $value["comment"]?></p>
+                                        </div>
+                                        <div class="clearfix"> </div>
+                                    </div>
+                                <?php endforeach; ?>
+                            <?php endif; ?>
+                            <div class="add-review">
+                                <h4>add a review</h4>
+                                <?php echo $this->comment_form; ?>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div role="tabpanel" class="tab-pane fade bootstrap-tab-text" id="dropdown1" aria-labelledby="dropdown1-tab">
+                        <p>Etsy mixtape wayfarers, ethical wes anderson tofu before they sold out mcsweeney's organic lomo retro fanny pack lo-fi farm-to-table readymade. Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings gentrify squid 8-bit cred pitchfork. Williamsburg banh mi whatever gluten-free, carles pitchfork biodiesel fixie etsy retro mlkshk vice blog. Scenester cred you probably haven't heard of them, vinyl craft beer blog stumptown. Pitchfork sustainable tofu synth chambray yr.</p>
+                    </div>
+                    <div role="tabpanel" class="tab-pane fade bootstrap-tab-text" id="dropdown2" aria-labelledby="dropdown2-tab">
+                        <p>Trust fund seitan letterpress, keytar raw denim keffiyeh etsy art party before they sold out master cleanse gluten-free squid scenester freegan cosby sweater. Fanny pack portland seitan DIY, art party locavore wolf cliche high life echo park Austin. Cred vinyl keffiyeh DIY salvia PBR, banh mi before they sold out farm-to-table VHS viral locavore cosby sweater. Lomo wolf viral, mustache readymade thundercats keffiyeh craft beer marfa ethical. Wolf salvia freegan, sartorial keffiyeh echo park vegan.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-   
+<!-- //single -->
+
+
+
+
+
+
+<script type="text/javascript">
+    function Rate(id) {
+        var radios = document.getElementsByName('rate');
+        for (var i = 0, length = radios.length; i < length; i++) {
+            if (radios[i].checked) {
+                var javascriptVariable = radios[i].value;
+                var url = "";
+                url += "/product/avgrate?rate=";
+                url += javascriptVariable;
+                url += "&pid=";
+                url += <?php echo $this->product['id']; ?>;
+                url += "&uid=";
+                url += <?php echo $userdata->id ;?>;
+                console.log(url);
+                window.location.href = url;
+            }
+        }
+    }
+</script>
+
