--- a/mZone/application/layouts/scripts/home.phtml
+++ b/mZone/application/layouts/scripts/home.phtml
@@ -11,7 +11,8 @@
 <div class="header-bot">
     <div class="container">
         <div class="col-md-3 header-left">
-            <h1><a href="index.html"><img src="<?php $this->baseUrl() ?>/images/logo3.jpg"></a></h1>
+            <!--<h1><a href="index.html"><img src="<?php $this->baseUrl() ?>/images/logo3.jpg"></a></h1>-->
+		<h1><a style="color:#000; font-size: 60px;" href="<?php $this->baseUrl() ?>"><strong>m<span style="color:#FDA30E;">Z</span>one</strong></a></h1>
         </div>
         <div class="col-md-6 header-middle">
             <form>
